--- a/index.html
+++ b/index.html
@@ -1,11 +1,126 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Astral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mohammad Hassan Bashari | Personal Page </title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <!--[if lte IE 8]>
+    <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css"/>
+    </noscript>
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
 </head>
-
 <body>
+
+<!-- Wrapper-->
+<div id="wrapper">
+
+    <!-- Nav -->
+    <nav id="nav">
+        <a href="#me" class="icon fa-home active"><span>Home</span></a>
+        <a href="#work" class="icon fa-folder"><span>Work</span></a>
+        <a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
+        <a href="#" class="icon fa-twitter"><span>Twitter</span></a>
+    </nav>
+
+    <!-- Main -->
+    <div id="main">
+
+        <!-- Me -->
+        <article id="me" class="panel">
+            <header>
+                <h1>Mohammad Hassan Bashari</h1>
+                <p>Machine Learning and NLP</p>
+
+            </header>
+            <a href="#work" class="jumplink pic">
+                <span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+                <img src="images/avatar.jpg" alt=""/>
+            </a>
+        </article>
+
+        <!-- Work -->
+        <article id="work" class="panel">
+            <header>
+                <h2>Work</h2>
+            </header>
+            <p>
+                B.Sc in computer software engineering. More than 5 years as a machine learning engineer and natural
+                language processing expert. Experienced with recommender systems and NLP tasks. More than 3 years with
+                deep learning specifically using deep learning in natural language processing tasks.
+            </p>
+            <section>
+                <div class="row">
+                    <div class="4u 12u$(mobile)">
+                        <a href="https://lnkd.in/e-exZ7r" class="image fit"><img src="images/noormags_recsys.jpeg" alt=""></a>
+                    </div>
+                    <div class="4u 12u$(mobile)">
+                        <a href="http://karans.blog.ir/post/%D8%AF%D9%88%D9%85%DB%8C%D9%86-%D9%87%D9%85%D8%A7%DB%8C%D8%B4-%D8%B2%D8%A8%D8%A7%D9%86-%D8%B4%D9%86%D8%A7%D8%B3%DB%8C-%D9%BE%DB%8C%DA%A9%D8%B1%D9%87-%D8%A7%DB%8C" class="image fit"><img src="images/karans_ner.jpg" alt=""></a>
+                    </div>
+                    <div class="4u$ 12u$(mobile)">
+                        <a href="https://github.com/mhbashari/perpos" class="image fit"><img src="images/perpos.png" alt=""></a>
+                    </div>
+
+                </div>
+            </section>
+        </article>
+
+        <!-- Contact -->
+        <article id="contact" class="panel">
+            <header>
+                <h2>Contact Me</h2>
+            </header>
+            <form action="#" method="post">
+                <div>
+                    <div class="row">
+                        <div class="6u 12u$(mobile)">
+                            <input type="text" name="name" placeholder="Name"/>
+                        </div>
+                        <div class="6u$ 12u$(mobile)">
+                            <input type="text" name="email" placeholder="Email"/>
+                        </div>
+                        <div class="12u$">
+                            <input type="text" name="subject" placeholder="Subject"/>
+                        </div>
+                        <div class="12u$">
+                            <textarea name="message" placeholder="Message" rows="8"></textarea>
+                        </div>
+                        <div class="12u$">
+                            <input type="submit" value="Send Message"/>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </article>
+
+    </div>
+
+    <!-- Footer -->
+    <div id="footer">
+        <ul class="copyright">
+            <li>&copy; Untitled.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+    </div>
+
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/skel-viewport.min.js"></script>
+<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]>
+<script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
