--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <article id="me" class="panel">
             <header>
                 <h1>Mohammad Hassan Bashari</h1>
-                <p>Machine Learning and NLP</p>
+                <p>Machine Learning Engineering and NLP</p>
 
             </header>
             <a href="#work" class="jumplink pic">
@@ -73,6 +73,7 @@
             </section>
         </article>
 
+
         <!-- Contact -->
         <article id="contact" class="panel">
             <header>
@@ -100,7 +101,6 @@
                 </div>
             </form>
         </article>
-
     </div>
 
     <!-- Footer -->
